# UnderCurrent

./: .env.example  .gitignore  ANDROID_SETUP.md  CLAUDE-ThePlan.md  PRIVACY_POLICY.md  README.md  WATCH_SYNC_GUIDE.md  claude-brief.txt  create_demo_user.py  garmininfo.txt  possiblefirststeps.txt  pyproject.toml  run_server.py  setup_test_data.py  test_api.py  urls.txt  what-visible-does.txt
.claude/: settings.local.json
android/: local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/cfshrv/monitor/: BuildConfig.kt.example  CfsHrvApplication.kt  MainActivity.kt
android/app/src/main/kotlin/com/cfshrv/monitor/config/: ApiConfig.kt.example
android/app/src/main/kotlin/com/cfshrv/monitor/data/api/: CfsHrvApiClient.kt
android/app/src/main/kotlin/com/cfshrv/monitor/data/model/: HrvData.kt
android/app/src/main/kotlin/com/cfshrv/monitor/ui/: CfsHrvApp.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
backend/: baseline_tracker.py  database.py  energy_budget_calculator.py  hrv_calculator.py  main.py  models.py
backend/api/: energy_budget.py  hrv.py  users.py
certs/: openssl.cnf
docs/: CLAUDE-ThePlan.md  DEVELOPER_SETUP.md  HTTPS_SETUP.md  README.md  TERMINOLOGY_UPDATE.md  WATCH_SYNC_GUIDE.md
research/: HRV_Formulas_and_Calculations.md  RESEARCH_SUMMARY.md  download_articles.py  fetch_failed_articles.py  scihub_direct.py
research/articles/: _download_log.txt
(+8 files in other folders)
