[project]
name = "cfs-hrv-monitor"
version = "0.1.0"
description = "Heart Rate Variability monitoring system for ME/CFS management"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "email-validator",
    "numpy",
    "scipy",
    "python-dateutil",
    "python-jose[cryptography]",
    "passlib",
    "bcrypt",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
    "requests",
]
